--- a/client/project.json
+++ b/client/project.json
@@ -1,4 +1,7 @@
 {
   "engine": "cocos2d-html5",
-  "packages": "packages"
+  "packages": "packages",
+  "version": "2.4.11",
+  "id": "c69ebc7d-b214-4088-922f-3ca1e1e52c16",
+  "isNew": false
 }
